<resources>
    <string name="app_name">Tang Story</string>
    <string name="story_name">Nama Pengguna</string>
    <string name="date_time">14 Okt 2023, 14:34</string>
    <string name="story_description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus sapiente quia cum dicta officiis facilis, corporis cupiditate et fuga optio culpa soluta hic incidunt tempora. Ut eveniet quis incidunt dolores est ullam fugit voluptatem dolore cumque. Magnam, fugit harum. Fugit quisquam facere nisi omnis est exercitationem adipisci necessitatibus laudantium. Autem.</string>
    <string name="fab_content_desc">Tambah story baru</string>
    <string name="detail_story">Detail Story</string>
    <string name="gambar_story">Gambar story</string>
    <string name="add_story">Story Baru</string>
    <string name="camera">Kamera</string>
    <string name="galery">Galery</string>
    <string name="upload">Unggah</string>
    <string name="description">Deskripsi</string>
    <string name="action_logout">Keluar</string>
    <string name="title_login_page">Siapkah Membagikan ceritamu?</string>
    <string name="message_login_page">Masukkan datamu dulu!</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="ed_email">Masukkan Email</string>
    <string name="ed_password">Masukkan Password</string>
    <string name="title_signup_page">Daftarkan akun anda disini</string>
    <string name="name">Nama</string>
    <string name="signup">Daftar</string>
    <string name="ed_name">Masukkan Nama</string>
    <string name="title_welcome_page">Selamat Datang di Tang Story!</string>
    <string name="message_welcome_page">Tempat berbagi cerita menarik kapanpun dan dimanapun kamu         berada, ayo berbagi sekarang!</string>
    <string name="signup_announcement">Belum Punya akun?</string>
    <string name="login_announcement">Sudah memiliki akun?</string>
    <string name="start">Mulai</string>
    <string name="image_new">Gambar cerita yang akan di upload</string>
    <string name="emty_image_warning">Masukkan Gambar terlebih dahulu!</string>
    <string name="warning_emty_image">Masukkan gambar terlebih dahulu!</string>
    <string name="warning_empty_description">Deskripsi wajib di isi!</string>
    <string name="warning_image_capture">Gagal mengambil gambar</string>
    <string name="warning_show_camera">Gagal memunculkan camera</string>
    <string name="permission_request_granted">" Permintaan izin kamera disetujui"</string>
    <string name="permission_request_denied">Permintaan izin kamera ditolak</string>
    <string name="warning_validation_password">Password tidak boleh kurang dari 8 karakter!</string>
    <string name="retry">Coba lagi</string>
    <string name="title_activity_story_location">StoryLocationActivity</string>
    <string name="story_location">Story Location</string>
    <string name="style_parsing_failed">Style gagal di terapkan</string>
    <string name="cant_find_style">"Style tidak di temukan, Kesalahan: "</string>
    <string name="lat">Lat:</string>
    <string name="lon">Lon:</string>
    <string name="network_available">Kamu tidak memiliki internet</string>
</resources>