<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.detail.DetailStroyActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/detail_story"
            app:titleTextColor="?attr/colorOnPrimary"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/appbarLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="18dp">
            <androidx.cardview.widget.CardView
                android:id="@+id/outlinePhoto"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:cardCornerRadius="10dp">
                <ImageView
                    android:id="@+id/iv_detail_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:transitionName="photo_url"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@tools:sample/avatars"
                    android:background="@drawable/story_shape"
                    android:contentDescription="@string/gambar_story" />
            </androidx.cardview.widget.CardView>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:layout_marginTop="16dp">
               <TextView
                   android:id="@+id/tv_lat"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:transitionName="created_at"
                   android:text="@string/lat"
                   android:textStyle="bold"
                   android:textColor="?attr/colorOutline"
                   android:layout_marginEnd="5dp"/>
               <TextView
                   android:id="@+id/tv_lon"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:transitionName="created_at"
                   android:text="@string/lon"
                   android:textStyle="bold"
                   android:textColor="?attr/colorOutline"
                   android:layout_marginEnd="5dp"/>
           </LinearLayout>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:transitionName="created_at"
                android:text="@string/date_time"
                android:textStyle="bold"
                android:textColor="?attr/colorOutline"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/tv_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:transitionName="name"
                android:text="@string/story_name"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/tv_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:transitionName="description"
                android:text="@string/story_description"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                android:justificationMode="inter_word"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>