<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.add.AddStoryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/add_story"
            app:titleTextColor="?attr/colorOnPrimary"/>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progresBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/appbarLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:layout_margin="16dp"
        android:alpha="0"
        tools:alpha="1"
        android:src="@drawable/baseline_image_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progresBar"
        android:contentDescription="@string/image_new" />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        tools:alpha="1"
        android:text="@string/camera"
        app:layout_constraintTop_toBottomOf="@id/previewImageView"
        app:layout_constraintStart_toStartOf="@id/previewImageView"
        app:layout_constraintEnd_toStartOf="@id/btn_galery"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="50dp"
        />

    <Button
        android:id="@+id/btn_galery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        tools:alpha="1"
        android:text="@string/galery"
        app:layout_constraintTop_toBottomOf="@id/previewImageView"
        app:layout_constraintEnd_toEndOf="@id/previewImageView"
        app:layout_constraintStart_toEndOf="@id/btn_camera"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintStart_toStartOf="@id/previewImageView"
        app:layout_constraintEnd_toEndOf="@id/previewImageView"
        app:layout_constraintTop_toBottomOf="@id/btn_camera"
        app:layout_constraintBottom_toTopOf="@id/sm_nowLoaction"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_add_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/description"
            android:layout_marginBottom="5dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sm_nowLoaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Use Current Location  "
        app:thumbTint="?attr/colorPrimary"
        app:trackTint="?attr/colorPrimaryContainer"
        app:layout_constraintTop_toBottomOf="@id/descriptionLayout"
        app:layout_constraintEnd_toEndOf="@id/descriptionLayout"
        app:layout_constraintBottom_toTopOf="@id/button_add" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        tools:alpha="1"
        android:text="@string/upload"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="@id/descriptionLayout"
        app:layout_constraintEnd_toEndOf="@id/descriptionLayout"
        app:layout_constraintTop_toBottomOf="@id/sm_nowLoaction"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>