<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/story_shape"
    android:layout_marginHorizontal="16dp"
    android:clipToOutline="true"
   android:layout_marginVertical="9dp">

    <ImageView
        android:id="@+id/iv_item_photo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/story_shape"
        tools:srcCompat="@tools:sample/avatars"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

   <LinearLayout
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:padding="12dp"
       android:orientation="vertical"
       app:layout_constraintTop_toBottomOf="@id/iv_item_photo"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent">

       <TextView
           android:id="@+id/tv_item_name"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="?attr/colorSecondary"
           android:textStyle="bold"
           android:text="@string/story_name"
           android:layout_marginBottom="3dp"
           android:textSize="16sp"/>
       <TextView
           android:id="@+id/tv_description"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="?attr/colorSecondary"
           android:text="@string/story_description"
           android:layout_marginBottom="3dp"
           android:maxLines="2"
           android:ellipsize="end"/>

       <TextView
           android:id="@+id/tv_date"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="?attr/colorOutline"
           android:text="@string/date_time" />

   </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>